Fix wonky layout issue with co-speaker avatar thumbnails

--- a/src/components/SchedulePage/ScheduleItemDetails.css
+++ b/src/components/SchedulePage/ScheduleItemDetails.css
@@ -58,6 +58,7 @@
 }
 
 .ScheduleItemDetails-Speakers {
+  display: flex;
   margin-left: var(--spacer-md);
   &:empty {
     display: none;
